--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ dfn { font-style: italic; }
 hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
 ins { background: #ff9; color: #000; text-decoration: none; }
 mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
-pre, code, kbd, samp { font-family: monospace, serif; _font-family: 'courier new', monospace; font-size: 1em; }
+pre, code, kbd, samp { font-family: 'Ubuntu Mono' monospace, serif; _font-family: 'courier new', monospace; font-size: 1em; }
 pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
 
 q { quotes: none; }
@@ -215,14 +215,13 @@ div[role="main"] {
   margin-left: 240px;
   width: 500px;
 }
-
 .highlight pre {
   white-space: pre;
   word-wrap: normal;
   overflow: visible;
   padding: 5px;
   border: solid 1px #ccc;
-  width: 800px;
+  width: 660px;
 }
 
 .links {
@@ -279,5 +278,104 @@ article footer {
   padding-top: 20px;
 }
 
+.date {
+  font-size: 14px;
+  font-style: italic;
+  color: #333;
+}
+
+article.index {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: dashed 1px #bbb;
+}
+
+.index h2 {
+  font-size: 20px;
+  margin: 0;
+}
+
+.index .meta a,
+.index .meta {
+  font-size: 14px;
+  color: #777;
+}
 
 
+.index h2 a {
+  color: #333;
+}
+
+
+
+
+#brickify + p > img {
+  float: left;
+  margin: 0 10px 10px 0;
+  border: solid 1px #c8c8c8;
+}
+
+#code_racer + p > img {
+  float: right;
+  margin: 0 0 10px 10px;
+  border: solid 1px #c8c8c8;
+}
+
+@media screen and (max-height: 550px) {
+  body > header {
+    position: absolute;
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+  body { padding: 0 5px;}
+  body > header {
+    position: relative;
+    width: auto;
+    border-right: none;
+  }
+
+  div[role=main] {
+    margin: 10px 0;
+    width: 100%;
+  }
+
+  a.brand {
+    font-size: 20px;
+    display: inline;
+    text-align: left;
+  }
+
+  p.bio {
+    display: none;
+  }
+
+  .links {
+    background: #d8d8d8;
+    border-bottom: solid 1px #AAA;
+  }
+
+  .links a {
+    display: inline-block;
+    font-size: 14px;
+    padding: 5px;
+    border-bottom: none;
+  }
+
+  .links :nth-child(5){
+    display: none;
+  }
+
+  .links a:hover .detail,
+  .links a:active .detail {
+    display: none;
+  }
+
+  .links a:hover,
+  .links a:active {
+    border-right: none;
+  }
+
+
+}
