--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{ page.title }}</title>
+  <title>{{ page.title }} &mdash; Jim Hoskins</title>
   <meta name="description" content="">
 
-  <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Arvo:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/style.css">
 
