--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Arvo:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css?v=1">
   <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Jim Hoskins Blog Feed" /> 
   <script src="/js/libs/modernizr-2.5.3.min.js"></script>
 </head>
