--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <p class="bio">
       <img class="snapshot" src="/img/jim.jpeg">
-      Web Dev<br> Teacher<br> Maker
+      Developer<br> Teacher<br> Maker
     </p>
 
     <div class="links">
